syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "validate/validate.proto";

import "core.proto";

service AuthService {
  rpc SignIn(SignInRequest) returns (AuthInfo);
  rpc SignOut(google.protobuf.Empty) returns (core.ResultReply);
  rpc RefreshTokens(RefreshTokenRequest) returns (RefreshTokenReply);
  rpc ValidateCredentials(google.protobuf.Empty) returns (core.ResultReply);

  rpc ResetPassword(ResetPasswordRequest) returns (core.ResultReply);
  rpc SetPassword(SetPasswordRequest) returns (core.ResultReply);

  rpc LoadUsersInfo(LoadUsersInfoRequest) returns (stream UserInfo);
  rpc LoadUsers(UserId) returns (stream User);
  rpc CreateUser(CreateUserRequest) returns (core.ResultReply);
  rpc UpdateUser(UpdateUserRequest) returns (core.ResultReply);

  // Avatar management with presigned URLs (client uploads directly to S3)
  // Get a presigned URL for uploading avatar directly to S3
  rpc GetAvatarUploadUrl(GetAvatarUploadUrlRequest) returns (AvatarUploadUrl);
  // Confirm avatar upload completed
  rpc ConfirmAvatarUpload(ConfirmAvatarUploadRequest) returns (core.ResultReply);
  // Delete user avatar from S3
  rpc DeleteUserAvatar(UserId) returns (core.ResultReply);

  // Session management
  // List all active sessions for the current user
  rpc ListSessions(google.protobuf.Empty) returns (ListSessionsReply);
  // Revoke a specific session
  rpc RevokeSession(RevokeSessionRequest) returns (core.ResultReply);
  // Revoke all sessions except current
  rpc RevokeOtherSessions(google.protobuf.Empty) returns (RevokeSessionsReply);
}

message ResetPasswordRequest {
  string email = 1 [(validate.rules).string.email = true];
}

message SetPasswordRequest {
  core.UUID user_id  = 1 [(validate.rules).message.required = true];
  string    email    = 2 [(validate.rules).string.email = true];
  string    password = 3 [(validate.rules).string.min_len = 5];
}

message SignInRequest {
  string     email           = 1 [(validate.rules).string.email = true];
  string     password        = 2 [(validate.rules).string.min_len = 5];
  core.UUID  installation_id = 3 [(validate.rules).message.required = true];
  ClientInfo client_info     = 4 [(validate.rules).message.required = true];
}

message LoadUsersInfoRequest {
  core.UUID          user_id  = 1; // Impersonated user id
  repeated core.UUID user_ids = 2; // Optional; if empty, load all users
}

// Client information sent with authentication requests
// Note: user_agent is extracted server-side from HTTP headers (like ip_address)
message ClientInfo {
  string                 device_id      = 1 [(validate.rules).string = {max_len: 255}]; // Unique device/client identifier
  string                 device_name    = 2 [(validate.rules).string = {max_len: 255}]; // Human-readable device name: "John's iPhone", "Work Laptop"
  string                 device_type    = 3 [(validate.rules).string = {max_len: 50}]; // 'mobile', 'tablet', 'desktop', 'web', 'unknown'
  string                 client_version = 4 [(validate.rules).string = {max_len: 100}]; // App/client version: "1.2.3", "2.0.0-beta"
  google.protobuf.Struct metadata       = 5; // Additional client metadata (device_model, os_info, fingerprint, capabilities, etc.)
}

message RefreshTokenRequest {
  string refresh_token = 1 [(validate.rules).string.min_len = 1];
}

message RefreshTokenReply {
  string refresh_token = 1;
  string access_token  = 2;
}

message AuthInfo {
  core.UUID user_id       = 1;
  string    user_name     = 2;
  UserRole  user_role     = 3;
  string    refresh_token = 4;
  string    access_token  = 5;
}

enum UserRole {
  ADMINISTRATOR = 0;
  USER          = 1;
}

message UserInfo {
  core.UUID id      = 1;
  string    name    = 2;
  string    email   = 3;
  UserRole  role    = 4;
  bool      deleted = 5;
}

message User {
  core.UUID id      = 1;
  string    name    = 2;
  string    email   = 3;
  UserRole  role    = 4;
  bool      deleted = 5;
}

// =============================================================================
// Session Management Messages
// =============================================================================

// Session information returned to clients
message SessionInfo {
  string                 device_id      = 1; // Unique device identifier
  string                 device_name    = 2; // Human-readable device name
  string                 device_type    = 3; // 'mobile', 'tablet', 'desktop', 'web', 'unknown'
  string                 client_version = 4; // App version
  string                 ip_address     = 5; // Last seen IP address (may be masked for privacy)
  string                 ip_country     = 6; // ISO 3166-1 alpha-2 country code
  int64                  created_at     = 7; // Session creation timestamp (Unix millis)
  int64                  last_seen_at   = 8; // Last activity timestamp (Unix millis)
  int64                  expires_at     = 9; // Session expiration timestamp (Unix millis)
  bool                   is_current     = 10; // True if this is the current session
  string                 ip_created_by  = 11; // IP address at session creation
  int32                  activity_count = 12; // Number of token refreshes (activity indicator)
  google.protobuf.Struct metadata       = 13; // Session metadata (user agent, fingerprint, etc.)
}

// Response for listing sessions
message ListSessionsReply {
  repeated SessionInfo sessions = 1;
}

// Request to revoke a specific session by device_id
message RevokeSessionRequest {
  string device_id = 1 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

// Response for revoking multiple sessions
message RevokeSessionsReply {
  int32 revoked_count = 1; // Number of sessions revoked
}

// Request for presigned upload URL
message GetAvatarUploadUrlRequest {
  core.UUID user_id      = 1 [(validate.rules).message.required = true];
  string    content_type = 2 [(validate.rules).string = {in: ["image/jpeg", "image/png", "image/webp"]}];
  uint64    content_size = 3 [(validate.rules).uint64 = {gt: 0, lte: 10485760}]; // Max 10MB
}

// Response with presigned URL for direct S3 upload
message AvatarUploadUrl {
  string upload_url = 1; // Presigned PUT URL for S3
  uint64 expires_in = 2; // URL expiration in seconds
}

// Confirm avatar upload completed
message ConfirmAvatarUploadRequest {
  core.UUID user_id = 1 [(validate.rules).message.required = true];
}

message UserId {
  core.UUID id = 1 [(validate.rules).message.required = true];
}

message CreateUserRequest {
  core.UUID id       = 1 [(validate.rules).message.required = true];
  string    name     = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
  string    email    = 3 [(validate.rules).string.email = true];
  string    password = 4 [(validate.rules).string.min_len = 5];
  UserRole  role     = 5;
  bool      deleted  = 6;
}

message UpdateUserRequest {
  core.UUID id      = 1 [(validate.rules).message.required = true];
  string    name    = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
  string    email   = 3 [(validate.rules).string.email = true];
  UserRole  role    = 4;
  bool      deleted = 5;
}
